Drawer layout did - Shreyas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tag_line">fashion that elevates you</string>
+    <string name="navi_drawer_open">Open navigation drawer</string>
+    <string name="navi_drawer_close">Close navigation drawer</string>
 </resources>
